modifying pres2